FEATURE(api-server): Add a route show an article
